--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.460.0",
+    "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
     "next": "14.0.4",
     "query-string": "^9.1.1",
